tests/lean/catchDelab.lean.expected.out
catchDelab.lean:9:7-9:11: error: unknown identifier 'test'
